added razorpay integration

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 <body>
   <app-root></app-root>
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 </body>
 
 </html>
